fixtures/frontend/milestone-2/invalid/source-option-type-mismatch/main.aivi
domain Duration over Int
    suffix sec : Int = value => Duration value

@source timer.every 120 with {
    immediate: 1,
    jitter: 1
}
signal tick : Signal Unit
